# quiz_app

./: .gitignore  CLAUDE.md  README.md  db.sqlite3  db.sqlite3.backup_old_version  db.sqlite3.test_snapshot  db_restore_test.sh  db_save_snapshot.sh  launch-website.bat  manage.py  out.sqlsource  pyproject.toml  requirements.txt  secrets.env  seed_test_data.py  test_db.sqlite3
Assign/: consumers.py  models.py  routing.py  signals.py  urls.py
Assign/migrations/: 0001_initial.py  0006_assignbundle.py  (+8 more)
Estimation/: consumers.py  models.py  views.py
QuizGame/: apps.py  consumers.py  models.py  routing.py  signals.py  views.py
admin_dashboard/: tests.py  urls.py  views.py
black_jack_quiz/: apps.py  consumers.py  models.py  signals.py  urls.py  views.py
clue_rush/: admin.py  consumers.py  models.py  routing.py  signals.py  urls.py  views.py
games_hub/: consumers.py  models.py  routing.py  signals.py  tests.py  urls.py  utils.py  views.py
games_website/: asgi.py  models.py  services.py  settings.py  urls.py  views.py  wsgi.py
myenv/: pyvenv.cfg
new_version/: db.sqlite3  main.py
quiz_app/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
quiz_project/: asgi.py  settings.py  urls.py
sorting_ladder/: apps.py  consumers.py  models.py  routing.py  urls.py
static/: player.css  theme.css
templates/: home_page.html
where_is_this/: apps.py  consumers.py  models.py  signals.py  urls.py
who_is_lying/: consumers.py  models.py  routing.py  signals.py  urls.py  views.py
who_is_that/: consumers.py  models.py  routing.py  urls.py  views.py
(+238 files in other folders)
