[project]
name = "games-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2.11",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "redis>=7.2.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "icecream>=2.1.10",
]
